<resources>
    <string name="app_name">EZPLAY</string>
    <string name="login">Login</string>
    <string name="forgetPwd">Lost your password?</string>
    <string name="register">Don\'t have an account? Sign up here!</string>
    <string name="signup">Register</string>
    <string name="customer">Register as Customer</string>
    <string name="seller">Register as Seller</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="please_enter_your_email_here_we_will_send_a_link_for_reset_password_via_that_email">Please enter your email here, we will send a link for reset password via that email</string>
    <string name="enter_you_email_here">Enter your email here</string>
    <string name="send_email">Send Email</string>
    <string name="booking_date">"Booking Date: "</string>
    <string name="age_13_years_old_and_above">(Age 13 years old and above)</string>
    <string name="age_12_years_old_and_below">(Age 12 years old and below)</string>
    <string name="meal_order">Meal Order</string>
    <string name="total_amount">Total Amount:</string>
    <string name="add_to_order_list">Add to order list</string>
    <string name="book_now">Book Now</string>
    <string name="view_cart">View Cart</string>
    <string name="adult_ticket">Adult Ticket</string>
    <string name="ticket">Ticket</string>
    <string name="meal">Meal</string>
    <string name="child_ticket">Child Ticket</string>
    <string name="no_order">No order</string>
    <string name="payment_method">Payment Method</string>
    <string name="account">Account</string>
    <string name="password">Password</string>
    <string name="pay">Pay</string>
    <string name="online_banking">Online Banking</string>
    <string name="visa_card">Visa Card</string>
    <string name="name_on_card">Name on card</string>
    <string name="card_number">Card number</string>
    <string name="mm_yy">MM/YY</string>
    <string name="cvc">CVC</string>
    <string name="user_info">User Info</string>
    <string name="transaction">Transaction</string>
    <string name="go"><![CDATA[>]]></string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="logout">Logout</string>
    <string name="version">Version 1.2.13 (220420)</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="retype_new_password">Retype New Password</string>
    <string name="password_must_be_minimum_8_chaacter">Password must be minimum 8 chaacter</string>
    <string name="booking_info">Booking Info</string>
</resources>
