<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.ezplay.buyer.PaymentFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/paymentConstraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include android:id="@+id/custom_navbar" layout="@layout/user_navbar" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="80dp"
            android:paddingTop="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/onlineBankingCardView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@color/colorBar"
                    android:padding="10dp"
                    app:cardCornerRadius="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/textView10"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            android:text="@string/online_banking" />
                        <EditText
                            android:id="@+id/accountEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:layout_margin="5dp"
                            android:inputType="textPersonName"
                            android:textColorHint="@color/hintColor"
                            android:hint="@string/account"/>
                        <EditText
                            android:id="@+id/passwordEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:layout_margin="5dp"
                            android:inputType="textPassword"
                            android:textColorHint="@color/hintColor"
                            android:hint="@string/password"/>
                        <Button
                            android:id="@+id/onlineBankingPayButton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/redColor"
                            android:textColor="@color/colorBar"
                            android:layout_margin="5dp"
                            android:textSize="18sp"
                            android:text="@string/pay" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/visaCardCardView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@color/colorBar"
                    android:padding="10dp"
                    app:cardCornerRadius="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/textView11"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            android:text="@string/visa_card" />
                        <EditText
                            android:id="@+id/nameOnCardEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="textPersonName"
                            android:textColorHint="@color/hintColor"
                            android:hint="@string/name_on_card"/>
                        <EditText
                            android:id="@+id/cardNumberEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="number"
                            android:textColorHint="@color/hintColor"
                            android:hint="@string/card_number"/>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <EditText
                                android:id="@+id/mmyyEditText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:maxLength="5"
                                android:inputType="number|text"
                                android:textColorHint="@color/hintColor"
                                android:hint="@string/mm_yy"/>
                            <EditText
                                android:id="@+id/cvcEditText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:maxLength="3"
                                android:inputType="number"
                                android:textColorHint="@color/hintColor"
                                android:hint="@string/cvc"/>
                        </LinearLayout>
                        <Button
                            android:id="@+id/visaCardPayButton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/redColor"
                            android:textColor="@color/colorBar"
                            android:layout_margin="5dp"
                            android:textSize="18sp"
                            android:text="@string/pay" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>