<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.ezplay.login.ForgetPwdFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/forgetpwdConstraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include android:id="@+id/custom_navbar" layout="@layout/user_navbar" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/please_enter_your_email_here_we_will_send_a_link_for_reset_password_via_that_email"
            android:textColor="@color/colorBar"
            android:textColorHint="@color/hintColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/custom_navbar"
            app:layout_constraintVertical_bias="0.45" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@android:drawable/sym_action_email"
            android:ems="10"
            android:hint="@string/enter_you_email_here"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorBar"
            android:textColorHint="@color/hintColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <ImageButton
            android:id="@+id/SendEmailbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hapticFeedbackEnabled="false"
            android:src="@drawable/sendemailbtn"
            android:text="@string/send_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailEditText"
            android:background="@null"/>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="169dp"
            android:layout_height="129dp"
            android:src="@drawable/sendemailpic"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/custom_navbar"
            app:layout_constraintVertical_bias="0.75" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>