<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.ezplay.login.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loginConstraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include android:id="@+id/custom_navbar" layout="@layout/user_navbar" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="300dp"
            android:layout_height="270dp"
            app:cardBackgroundColor="@color/colorBar"
            app:cardCornerRadius="12dp"
            app:layout_constraintBottom_toBottomOf="@+id/custom_navbar"
            app:layout_constraintEnd_toEndOf="@+id/custom_navbar"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/custom_navbar"
            app:layout_constraintVertical_bias="0.464">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/login"
                    android:textColor="@color/textColor"
                    android:textSize="28dp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/emailEditText"
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="Email"
                    android:inputType="textEmailAddress"
                    android:text=""
                    style="@style/login_edit_text" />

                <EditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="Password"
                    android:inputType="textPassword"
                    android:text=""
                    style="@style/login_edit_text" />

                <ImageButton
                    android:id="@+id/loginBtn"
                    android:layout_width="240dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="#fff"
                    android:src="@drawable/login_button" />

                <TextView
                    android:id="@+id/forgetpwdBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:clickable="true"
                    android:text="@string/forgetPwd" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/registerBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="@color/colorBar"
            android:textSize="12dp"
            app:layout_constraintBottom_toBottomOf="@+id/custom_navbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView"
            app:layout_constraintVertical_bias="0.038" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>