<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.ezplay.login.RegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/registerConstraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include android:id="@+id/custom_navbar" layout="@layout/user_navbar" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="300dp"
            android:layout_height="400dp"
            app:cardBackgroundColor="#fff"
            app:cardCornerRadius="12dp"
            app:layout_constraintBottom_toBottomOf="@+id/custom_navbar"
            app:layout_constraintEnd_toEndOf="@+id/custom_navbar"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/custom_navbar"
            app:layout_constraintVertical_bias="0.464">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/signup"
                    android:textColor="@color/textColor"
                    android:textSize="28dp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/nameEditText"
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    style="@style/login_edit_text"
                    android:hint="Name"
                    android:inputType="textPersonName"
                    android:text="" />

                <EditText
                    android:id="@+id/emailEditText"
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    style="@style/login_edit_text"
                    android:hint="Email Address"
                    android:inputType="textEmailAddress"
                    android:text="" />

                <EditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    style="@style/login_edit_text"
                    android:hint="Password"
                    android:inputType="textPassword"
                    android:text="" />

                <EditText
                    android:id="@+id/retypePasswordEditText"
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    style="@style/login_edit_text"
                    android:hint="Retype Password"
                    android:inputType="textPassword"
                    android:text="" />

                <RadioGroup
                    android:id="@+id/rolesRadioBtn"
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    style="@style/login_edit_text"
                    android:checkedButton="@id/customerButton"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/customerButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/customer"
                        android:textSize="12dp" />

                    <RadioButton
                        android:id="@+id/sellerButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/seller"
                        android:textSize="12dp" />
                </RadioGroup>

                <ImageButton
                    android:id="@+id/signupBtn"
                    android:layout_width="240dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorBar"
                    android:src="@drawable/register_button" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>